web/static/sass/partials/_base.sass
$default-border: 1px solid $default-border-color

@mixin reset
  border-radius: 0
  overflow: visible
  > thead,
  > tbody
    > tr
      font-size: inherit
      padding: 0

@mixin border

  border: $default-border

@mixin border-type($type)

  border-#{$type}: $default-border

@mixin background

  background-color: $white


.csv-editor
  @include border
  @include reset
  > thead,
  > tbody
    @include background
    > tr:nth-child(even),
    > tr:nth-child(odd)
      @include background
      > td,
      > th
        @include border-type(left)
        padding: 0.125rem 0.25rem
        &:first-child
          border-left: 0
      > th
        background-color: $table-head-background
        color: rgba(0, 0, 0, 0.6)
        font-weight: normal
        text-align: center
  > thead
    @include border-type(bottom)
    > tr:nth-child(even),
    > tr:nth-child(odd)
      line-height: 1.5rem
  > tbody
    > tr:nth-child(even),
    > tr:nth-child(odd)
      @include border-type(bottom)
      > td
        color: rgba(0, 0, 0, 0.85)

